--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       transition: background-color 0.3s ease;
     }
     button:disabled {
-      background-color: #fca5a5;
+      background-color: #b91c1c;
       cursor: not-allowed;
     }
     button:not(:disabled):hover {
