--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       box-shadow: none;
     }
     #passwordSubmit {
-      background-color: #4e3d3d;
+      background-color: #c91010;
       color: white;
     }
     #passwordSubmit:hover {
