--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <option value="" disabled selected>-- Choose a file --</option>
       <option value="https://download2391.mediafire.com/xltngcnf8dqgL3U2Ilryz_E0rBy5RJPbBSlKA9B7eQZgXP_GiDGpLa9v6FVnMJtaLFZ8Jx3xDdkJNDAMp2X6kk_2kinVEuYuf4eQ6J2edjLVpAgl7QvaUm2WnJUAW2w6DsEZF_FpqXiH7yBcHh54oAbgX4MIuBQsGv606ZNJpgE/54viqkxvddn2h99/Free+Fire+1.109.1+DOKO_Team.xapk">Free Fire N32 &amp; P64 OB48 🟢</option>
       <option value="https://download1531.mediafire.com/m20eyfr4f5vgS6dscCEclJ982rdCZJjgIk6vylifq_QJRgenWs6Q3cyhLzPLKWJlyz0njrjZMzLThuj3cjuezlQM9syq1TSQ8pD4lVzy4IC__LL4xPWvaAQYw8sTGt2UYbniVgOxLmsK1ggzhINs3IWK9t2EtSczExAYb_A3avs/ytajqsgpbzw94jo/Free+Fire+MAX+2.109.1_DOKOTeam.xapk">Free Fire MAX N32 &amp; P64 🟢</option>
-      <option value="https://drive.google.com/drive/folders/1MKzp7-EVcwcC3NTUDfFcyDzZZ50v-f2U">Panel PC External 👑</option>
+      <option value="https://download2267.mediafire.com/gn8cnwlix3qgb6BELF9WHqUf7l2tUNoFEqzevAxWBrNIOsCY-ygKr3biHj4ZBSobN5ntqVCdKf5iX-0N33ZnFpBJHeG3kqTknneyvNJjfxNjaEr_2_KBYtkLrtuEEmr_EPLK1ryB7L-AQHWmwLMHyL0lKzYMih3jNlXvgf7Ga44/7u1xff1cvxr6jsm/PASSWORD_1.zip">Panel PC External 👑</option>
     </select>
     <button id="downloadBtn" disabled aria-disabled="true" aria-label="Download selected file">Download</button>
   </div>
