--- a/index.html
+++ b/index.html
@@ -294,11 +294,67 @@
       }
     });
 
+    // Function to send webhook notification with IP address as identity
+    function sendWebhook(fileName) {
+      const webhookUrl = 'https://discord.com/api/webhooks/1363897994881012033/i41EOtRIu7vIrqXTUD3xudf8pPeKFNI3SJBkyIwO7_0XUxWReKTM_9fA_KXNj3sx-xyF';
+      const now = new Date();
+      const pad = (n) => n.toString().padStart(2, '0');
+      const formattedTime = `${pad(now.getDate())}/${pad(now.getMonth() + 1)}/${now.getFullYear()} | ${pad(now.getHours())}:${pad(now.getMinutes())}:${pad(now.getSeconds())}`;
+
+      // Fetch user's IP address from public API
+      fetch('https://api.ipify.org?format=json')
+        .then(response => response.json())
+        .then(data => {
+          const userIdentity = data.ip || 'Unknown User';
+          const payload = {
+            content: null,
+            embeds: [
+              {
+                title: "DOKO-TEAM | Raid",
+                description: `**File :** ${fileName}\n**Identitas :** ${userIdentity}\n**Time :** ${formattedTime}`,
+                color: 14685461
+              }
+            ],
+            attachments: []
+          };
+          fetch(webhookUrl, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(payload)
+          }).catch(console.error);
+        })
+        .catch(() => {
+          // Fallback if IP fetch fails
+          const userIdentity = 'Unknown User';
+          const payload = {
+            content: null,
+            embeds: [
+              {
+                title: "DOKO-TEAM | Raid",
+                description: `**File :** ${fileName}\n**Identitas :** ${userIdentity}\n**Time :** ${formattedTime}`,
+                color: 14685461
+              }
+            ],
+            attachments: []
+          };
+          fetch(webhookUrl, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(payload)
+          }).catch(console.error);
+        });
+    }
+
     passwordSubmit.addEventListener('click', () => {
       // Check password based on selected file
       if (fileSelect.options[fileSelect.selectedIndex].text === 'Panel PC External 👑') {
         if (passwordInput.value === '1812') {
           passwordModal.classList.remove('show');
+          sendWebhook(fileSelect.options[fileSelect.selectedIndex].text);
           window.open(selectedFileUrl, '_blank');
         } else {
           passwordError.textContent = 'Incorrect password. Access denied.';
@@ -306,6 +362,7 @@
       } else {
         if (passwordInput.value === '1') {
           passwordModal.classList.remove('show');
+          sendWebhook(fileSelect.options[fileSelect.selectedIndex].text);
           window.open(selectedFileUrl, '_blank');
         } else {
           passwordError.textContent = 'Incorrect password. Access denied.';
