--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
       <label for="fileSelect">Select a file to download:</label>
       <select id="fileSelect" aria-label="Select a file to download" aria-required="true">
         <option value="" disabled selected>-- Choose a file --</option>
-        <option value="https://download2391.mediafire.com/xltngcnf8dqgL3U2Ilryz_E0rBy5RJPbBSlKA9B7eQZgXP_GiDGpLa9v6FVnMJtaLFZ8Jx3xDdkJNDAMp2X6kk_2kinVEuYuf4eQ6J2edjLVpAgl7QvaUm2WnJUAW2w6DsEZF_FpqXiH7yBcHh54oAbgX4MIuBQsGv606ZNJpgE/54viqkxvddn2h99/Free+Fire+1.109.1+DOKO_Team.xapk">Free Fire N32 &amp; P64 OB48 🟢</option>
-        <option value="https://download1531.mediafire.com/m20eyfr4f5vgS6dscCEclJ982rdCZJjgIk6vylifq_QJRgenWs6Q3cyhLzPLKWJlyz0njrjZMzLThuj3cjuezlQM9syq1TSQ8pD4lVzy4IC__LL4xPWvaAQYw8sTGt2UYbniVgOxLmsK1ggzhINs3IWK9t2EtSczExAYb_A3avs/ytajqsgpbzw94jo/Free+Fire+MAX+2.109.1_DOKOTeam.xapk">Free Fire MAX N32 &amp; P64 🟢</option>
+        <option value="https://download2446.mediafire.com/kyvi2ydgmqmgv2L3fEiI1m449rS8tmspadcSw9gevauqoSRU5o4ANwGWU6Mh6N8A7rkiPyJV4jqIA7gxDxj6iz9HhivIVQt6Wb49cthuZDujEmS10TSOg95OTcqCz4bN-v9nv52N6aixwqcZGsLxhoGlmpVIcGFrLipvnnFwhJM/92rmrqmkre5m2zf/Free+Fire+1.111.1+DOKO+Team.xapk">Free Fire N32 &amp; P64 OB48 🟢</option>
+        <option value="https://d-e02.winudf.com/b/XAPK/Y29tLmR0cy5mcmVlZmlyZW1heF8yMDE5MTE1MjkzXzFjZjU4YTJm?_fn=RnJlZSBGaXJlIE1BWF8yLjExMS4xX0FQS1B1cmUueGFwaw&_p=Y29tLmR0cy5mcmVlZmlyZW1heA%3D%3D&is_hot=true&k=932a24e2e2da0bdee2ca1379a42611a5683483a4&uu=https%3A%2F%2Fd-02.winudf.com%2Fb%2FXAPK%2FY29tLmR0cy5mcmVlZmlyZW1heF8yMDE5MTE1MjkzXzFjZjU4YTJm%3Fk%3Dfe7db6d3dc91f68f954e0b1ba2ae38ab683483a4">Free Fire MAX N32 &amp; P64 🟢</option>
         <option value="https://download2302.mediafire.com/gehk01tgrtjg4DS3-PMRD6sOzAxVrBIMukZ_bq0gNHxKwj__73Z5LHCCPYHJPiU1qLNsUvtZTy4rVY6CdEHNTSBzddP-akcS0_mi11FavBLfIPro3-qY7Cen2PK99KG2C1DKKh4bzBjzMLN6kgP2NqqTn7G_uoBPtAURt-gVNiM/7u1xff1cvxr6jsm/PASSWORD_1.zip">Panel PC External 👑</option>
       </select>
       <button id="downloadBtn" disabled aria-disabled="true" aria-label="Download selected file">Download</button>
